--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
     <groupId>org.example</groupId>
     <artifactId>StaffModLib</artifactId>
     <version>1.0.0</version>
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
     <repositories>
         <repository>
             <id>spigot-repo</id>
@@ -25,10 +29,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
